Created section Hero - content and styles.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <title>NNP - NoNamePeople</title>
   </head>
   <body>
-    <header>
+    <header class="header-container">
       <div class="header-top">
         <ul>
           <li>
-            <a href="#"
+            <a href="/"
               ><svg
                 class="logo"
                 width="24"
@@ -33,7 +33,7 @@
             </a>
           </li>
           <li class="logo-text">
-            <a href="#"> NNP </a>
+            <a href="/"> NNP </a>
           </li>
           <li>
             <a href="#">
@@ -43,6 +43,21 @@
             </a>
           </li>
         </ul>
+      </div>
+      <div class="header-hero">
+        <div class="hero-content">
+          <h1>NoNamePeople, <br />Your Path to Business Success</h1>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+            illum, neque laborum ?
+          </p>
+          <button class="btn">LEARN MORE</button>
+        </div>
+        <img
+          class="hero-img"
+          src="/assets/png/hero.png"
+          alt="creative content"
+        />
       </div>
     </header>
     <main>
