Created section Footer content and styles.

--- a/index.html
+++ b/index.html
@@ -658,8 +658,40 @@
       </div>
     </main>
 
-    <footer>
-      <!-- TODO: Footer content in here -->
+    <footer class="footer-container">
+      <div class="footer-rights">
+        <p>
+          &copy; 2022 NoNamePeople. Replicated by
+          <a href="#" target="_blank">Oliveira</a>, DCI student.
+        </p>
+      </div>
+      <div>
+        <ul class="footer-social">
+          <li>
+            <a href="#" target="_blank">
+              <svg class="icon">
+                <use xlink:href="assets/icomoon/sprite.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+              <svg class="icon">
+                <use
+                  xlink:href="assets/icomoon/sprite.svg#icon-instagram"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+              <svg class="icon">
+                <use xlink:href="assets/icomoon/sprite.svg#icon-youtube"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
